--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,10 @@
-/target
-/classes
-/checkouts
-profiles.clj
 pom.xml
 pom.xml.asc
 *.jar
 *.class
-/.lein-*
 /.nrepl-port
 /.prepl-port
 .hgignore
 .hg/
 resources/client-key
+.cpcache
